--- a/Version2.0/src/assets/languages/zh_cn.json
+++ b/Version2.0/src/assets/languages/zh_cn.json
@@ -12,7 +12,9 @@
         "restore": "还原",
         "backupRestore": "备份还原",
         "versionName": "版本名称",             
-        "exit": "退出"
+        "exit": "退出",
+        "Chinese": "中文",
+        "English": "English"
     },
     "action": {
         "operation": "操作",
